# cod-ab-data-quality

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: .gitignore  metadata.csv
src/: __main__.py  config.csv  config.py  m49.csv  main.py  table_data_formatting.py  unterm.csv  utils.py
src/check_table_completeness/: __main__.py  table_data_completeness.py
src/checks/: __main__.py  dates.py  geometry.py  geometry_gaps.py  geometry_hierarchy.py  geometry_overlaps.py  geometry_overlaps_parent.py  geometry_overlaps_self.py  geometry_valid.py  geometry_within_parent.py  languages.py  table_data_completeness.py  table_data_formatting_has_data.py  table_data_formatting_heirarchical.py  table_names.py  table_names_config.py  table_names_utils.py  table_other.py  table_pcodes.py
src/download/: __init__.py  __main__.py  config.py  httpx.py  ogr2ogr.py  utils.py
src/images/: __main__.py  image.py
src/metadata/: __init__.py  __main__.py  getters.py  join.py  utils.py
src/reports/: __main__.py  attribute.py  image.py  report.py
src/reports/templates/: report.css  report.html.j2
src/scores/: __main__.py  columns.py  dates.py  geometry.py  geometry_areas.py  geometry_topology.py  geometry_validity.py  languages.py  output.py  table_areas.py  table_dates.py  table_languages.py  table_names.py  table_other.py  table_pcodes.py
src/utils/: outputs.py
tests/: __init__.py  conftest.py
tests/checks/: test_completeness.py  test_geometry.py  test_geometry_hierarchy.py  test_geometry_overlaps.py  test_geometry_overlaps_parent.py  test_geometry_overlaps_self.py  test_geometry_within_parent.py  test_table_data_formatting_has_data.py
tests/example/: test_example.py  test_example_v2.py
tests/table_data_completeness/: test_completeness.py
tests/table_data_formatting/: test_table _data_formatting.py  test_table_data_formatting_has_data.py  test_table_data_formatting_heirarchical.py  test_table_data_hierarchy.py
tests/test_data/: mdg_adm0.gpkg
tests/test_data/mdg_adm_bngrc_ocha_20181031_shp/: mdg_admbndl_all_BNGRC_OCHA_20181031.sbn  mdg_admbndl_all_BNGRC_OCHA_20181031.sbx  mdg_admbndl_all_BNGRC_OCHA_20181031.shp.xml  mdg_admbndl_all_BNGRC_OCHA_20181031.shx
