[tool.poetry]
authors = ["ediakatos <ediakatos@mapaction.org>", "maxmalynowsky"]
description = "This project serves as a template for initialising new Python projects with Poetry, including basic configuration for dependency management and virtual environment setup. It is designed to be cloned for quick setup of new repositories on GitHub."
license = "GPL-3.0-only"
name = "template-poetry"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
geopandas = "^1.0.1"
httpx = { version = "^0.27.2", extras = ["http2"] }
pandas = { version = "^2.2.2", extras = ["performance", "excel"] }
pyarrow = "^17.0.0"
python = "^3.12"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pymarkdownlnt = "^0.9.22"
pytest = "^8.3.2"
ruff = "^0.6.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ANN0", "D", "E4", "E7", "E9", "F", "I", "PT", "TID"]

[tool.ruff.lint.pydocstyle]
convention = "google"
