[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["ediakatos <ediakatos@mapaction.org>", "maxmalynowsky"]
description = "This project serves as a template for initialising new Python projects with Poetry, including basic configuration for dependency management and virtual environment setup. It is designed to be cloned for quick setup of new repositories on GitHub."
license = "GPL-3.0-only"
name = "template-poetry"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
geopandas = "^1.0.1"
httpx = { version = "^0.27.2", extras = ["http2"] }
jinja2 = "^3.1.4"
kaleido = "0.2.1"
pandas = { version = "^2.2.2", extras = ["performance", "excel"] }
plotly = "^5.24.1"
pyarrow = "^17.0.0"
python = "^3.12"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
tqdm = "^4.66.5"
weasyprint = "^62.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pymarkdownlnt = "^0.9.23"
pytest = "^8.3.3"
ruff = "^0.6.5"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
fix = true
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "INP", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
